# only-qrcode

./: .gitignore  index.html  package.json  pnpm-lock.yaml  vite.config.ts
fastlane/: Appfile  Fastfile  README.md
fastlane/metadata/: copyright.txt
fastlane/metadata/en-US/: description.txt  keywords.txt  marketing_url.txt  name.txt  privacy_url.txt  promotional_text.txt  release_notes.txt  subtitle.txt  support_url.txt
scripts/: generate-screenshots.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
store-assets/: app-store-metadata.md  privacy-policy.md
