[package]
name = "only-qrcode"
version = "1.1.1"
description = "Simple QR code generator. No tracking, no ads."
authors = ["Tyler Mecham"]
license = "MIT"
repository = "https://github.com/TylerStacie2005/only-qrcode"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
base64 = "0.22"
